opsmx-isd-register/k8s/k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: opsmx-isd-register-service
  namespace: ns-isd-register
  labels:
    name: opsmx-isd-register-service
spec:
  ports:
    - nodePort: 30164
      port: 8010
      targetPort: 8010
      protocol: TCP
  selector:
    app: opsmx-isd-register-service
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsmx-isd-register-service
  namespace: ns-isd-register
spec:
  selector:
    matchLabels:
      app: opsmx-isd-register-service
  replicas: 1
  template:
    metadata:
      labels:
        app: opsmx-isd-register-service
    spec:
      containers:
        - name: opsmx-isd-register-service
          image: ashishck/opsmx-isd-register:v5.5.10
          ports:
            - containerPort: 8010
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/issuer: letsencrypt-reg-spin
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
  name: opsmx-isd-register-service
  namespace: ns-isd-register
spec:
  rules:
    - host: opsmx-register.canis.isd.opsmx.org
      http:
        paths:
          - backend:
              service:
                name: opsmx-isd-register-service
                port:
                  number: 8010
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - opsmx-register.canis.isd.opsmx.org
      secretName: reg-new-authtls
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ns-isd-register
  labels:
    app: postgres
    tier: database
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
    tier: database
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: ns-isd-register
  labels:
    app: postgres
    tier: database
spec:
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
        tier: database
    spec:
      containers:
        - name: postgres
          image: postgres
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /tmp
              name: postgres-persistance-storage
      volumes:
        - name: postgres-persistance-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
