opsmx-isd-register/k8s/opsmx-isd-register-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: opsmx-isd-register-service
  namespace: ns-isd-register
spec:
  ports:
    - port: 8010
      protocol: TCP
      targetPort: 8010
  selector:
    app: opsmx-isd-register-service
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsmx-isd-register-service
  namespace: ns-isd-register
spec:
  selector:
    matchLabels:
      app: opsmx-isd-register-service
  replicas: 1
  template:
    metadata:
      labels:
        app: opsmx-isd-register-service
    spec:
      containers:
        - name: opsmx-isd-register-service
          image: ashishck/opsmx-isd-register:v5.5.8
          ports:
            - containerPort: 8010
              name: server
      imagePullSecrets:
        - name: regcred

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: opsmx-isd-register-service
  namespace: ns-isd-register
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - http:
        paths:
          - path: /webhookTrigger
            backend:
              serviceName: client-opsmx-isd-register-service
              servicePort: 8010
          - path: /opsmx-spinnaker-account
            backend:
              serviceName: server-opsmx-isd-register-service
              servicePort: 8010
